rearrange asymmetry sections

--- a/bib/theory.bib
+++ b/bib/theory.bib
@@ -583,3 +583,51 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1105.4606;%%",
 }
+
+@techreport{CMS-PAS-TOP-13-011,
+      title         = "{Measurement of the inclusive top-quark pair + photon
+                       production cross section in the muon + jets channel in pp
+                       collisions at 8 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-TOP-13-011",
+      year          = "2014",
+}
+
+@techreport{ATLAS-CONF-2014-038,
+      title         = "{Evidence for the associated production of a vector boson
+                       (W, Z) and top quark pair in the dilepton and trilepton
+                       channels in pp collision data at $\sqrt{s}=8$ TeV collected
+                       by the ATLAS detector at the LHC}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2014-038",
+      month         = "Jul",
+      year          = "2014",
+}
+
+@techreport{ATLAS-CONF-2013-033,
+      title         = "{Combination of the ATLAS and CMS measurements of the
+                       W-boson polarization in top-quark decays}",
+      institution   = "CERN",
+      collaboration = "ATLAS Collaboration",
+      address       = "Geneva",
+      number        = "ATLAS-CONF-2013-033",
+      month         = "Mar",
+      year          = "2013",
+}
+
+@article{Khachatryan:2014vma,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Measurement of the W boson helicity in events with a
+                        single reconstructed top quark in pp collisions at
+                        sqrt(s)=8 TeV}",
+      collaboration  = " CMS Collaboration",
+      year           = "2014",
+      eprint         = "1410.1154",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-TOP-12-020, CERN-PH-EP-2014-242",
+      SLACcitation   = "%%CITATION = ARXIV:1410.1154;%%",
+}
